0.5.3/_sources/api/napari.utils.DirectLabelColormap.rst
napari.utils.DirectLabelColormap
================================

.. currentmodule:: napari.utils

.. autoclass:: DirectLabelColormap
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~DirectLabelColormap.construct
   
   
      ~DirectLabelColormap.copy
   
   
      ~DirectLabelColormap.dict
   
   
      ~DirectLabelColormap.enums_as_values
   
   
      ~DirectLabelColormap.from_orm
   
   
      ~DirectLabelColormap.json
   
   
      ~DirectLabelColormap.map
   
   
      ~DirectLabelColormap.parse_file
   
   
      ~DirectLabelColormap.parse_obj
   
   
      ~DirectLabelColormap.parse_raw
   
   
      ~DirectLabelColormap.reset
   
   
      ~DirectLabelColormap.schema
   
   
      ~DirectLabelColormap.schema_json
   
   
      ~DirectLabelColormap.update
   
   
      ~DirectLabelColormap.update_forward_refs
   
   
      ~DirectLabelColormap.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~DirectLabelColormap.colorbar
      ~DirectLabelColormap.default_color
      ~DirectLabelColormap.events
      
      
      
      
      
      
      
      
   
   

   .. rubric:: Details