0.7.1/_sources/api/napari.utils.DirectLabelColormap.rst
napari.utils.DirectLabelColormap
================================

.. currentmodule:: napari.utils

.. autoclass:: DirectLabelColormap
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~DirectLabelColormap.construct
   
   
      ~DirectLabelColormap.copy
   
   
      ~DirectLabelColormap.dict
   
   
      ~DirectLabelColormap.enums_as_values
   
   
      ~DirectLabelColormap.from_orm
   
   
      ~DirectLabelColormap.json
   
   
      ~DirectLabelColormap.map
   
   
      ~DirectLabelColormap.model_construct
   
   
      ~DirectLabelColormap.model_copy
   
   
      ~DirectLabelColormap.model_dump
   
   
      ~DirectLabelColormap.model_dump_json
   
   
      ~DirectLabelColormap.model_json_schema
   
   
      ~DirectLabelColormap.model_parametrized_name
   
   
      ~DirectLabelColormap.model_post_init
   
   
      ~DirectLabelColormap.model_rebuild
   
   
      ~DirectLabelColormap.model_validate
   
   
      ~DirectLabelColormap.model_validate_json
   
   
      ~DirectLabelColormap.model_validate_strings
   
   
      ~DirectLabelColormap.parse_file
   
   
      ~DirectLabelColormap.parse_obj
   
   
      ~DirectLabelColormap.parse_raw
   
   
      ~DirectLabelColormap.reset
   
   
      ~DirectLabelColormap.schema
   
   
      ~DirectLabelColormap.schema_json
   
   
      ~DirectLabelColormap.update
   
   
      ~DirectLabelColormap.update_forward_refs
   
   
      ~DirectLabelColormap.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~DirectLabelColormap.colorbar
      ~DirectLabelColormap.default_color
      ~DirectLabelColormap.events
      ~DirectLabelColormap.model_computed_fields
      ~DirectLabelColormap.model_config
      ~DirectLabelColormap.model_extra
      ~DirectLabelColormap.model_fields
      ~DirectLabelColormap.model_fields_set
      
      
      
      
      
      
      
      
      
      
      
   
   

   .. rubric:: Details